178 : enpoint trace and refactor models constructor
